diesel_compile_tests/tests/fail/update_requires_left_side_of_eq_to_be_a_column.rs
extern crate diesel;

use diesel::*;

table! {
    users {
        id -> Integer,
        name -> VarChar,
    }
}

fn main() {
    use self::users::dsl::*;

    let foo = "foo".into_sql::<sql_types::VarChar>();
    let command = update(users).set(foo.eq(name));
}
